@startuml

title __PUSHNOTIFICATION's Class Diagram__\n

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.domain {
      class DeviceDetails {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.util {
      class DeviceDetailsBuilder {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.repository {
      interface DeviceRepository {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.util {
      class ExtendedNotification {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.domain {
      class InAppNotificationPriority {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.repository {
      interface InAppNotificationPriorityRepository {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.util {
      class InAppNotificationResponse {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.controller {
      class NotificationController {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.domain {
      class NotificationDetails {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.repository {
      interface NotificationRepository {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.util {
      class NotificationRequest {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    class PushNotificationApplication {
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.configs {
      class PushyConfiguration {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.domain {
      class RemoteConfig {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.controller {
      class RemoteConfigController {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.repository {
      interface RemoteConfigRepository {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.util {
      class RemoteConfigRequest {
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.util {
      class RemoteConfigResponse {
      }
    }
  }
  

  ExtendedNotification -up-|> Notification
  NotificationController o-- DeviceRepository : deviceRepository
  NotificationController o-- NotificationRepository : notificationRepository
  NotificationController o-- InAppNotificationPriorityRepository : inAppNotificationPriorityRepository
  NotificationRequest o-- Priority : priority
  RemoteConfig o-- ConfigType : configType
  RemoteConfigController o-- RemoteConfigRepository : remoteConfigRepository
  RemoteConfigRequest o-- ConfigType : configType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
